# sous-marin-service

./: README.md  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml  sous-marin-service.dockerfile
.github/workflows/: sous-marin-service.yml
sous_marin/: __init__.py  rest.py
sous_marin/api/api_v1/: api.py  login.py  players.py
sous_marin/core/: config.py  security.py
sous_marin/db/: player.py
sous_marin/models/: player.py
tests/api/: conftest.py
tests/api/v1/: test_login.py  test_players.py
tests/unit/: test_api_v1_login.py  test_config.py  test_seccurity.py  test_security.py
