[tool.poetry]
name = "sous-marin-service"
version = "0.1.0"
description = "Rest service for tennis"
authors = ["Andrei Boyanov <andrei.boyanov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.54.1"
uvicorn = "^0.11.5"
ujson = "^2.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
requests = "^2.23.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
