[tool.poetry]
name = "sous-marin-service"
version = "0.1.2"
description = "Rest service for tennis"
authors = ["Andrei Boyanov <andrei.boyanov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.54.1"
uvicorn = "^0.11.5"
ujson = "^2.0.3"
passlib = "^1.7.2"
python-jose = "^3.1.0"
python-multipart = "^0.0.5"
pydantic = {extras = ["email"], version = "^1.5.1"}
pytoml = "^0.1.21"
motor = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
requests = "^2.23.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
